fix home page scrollbars, community page event image position, speaker session page tabs

--- a/projects/commudle-admin/src/app/feature-modules/public-events/components/speaker-session-page/speaker-session-page.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-events/components/speaker-session-page/speaker-session-page.component.scss
@@ -1,170 +1,3 @@
-// .speaker-session-details {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   width: 100%;
-//   .card-row {
-//     display: flex;
-//     flex-direction: column;
-
-//     width: 100%;
-//     @media screen and (min-width: 1000px) {
-//       flex-direction: row;
-//       margin: 0 -0.5rem;
-//     }
-
-//     .card-session-details {
-//       width: 100%;
-
-//       @media screen and (min-width: 1000px) {
-//         width: 60%;
-//       }
-
-
-//       .session-details {
-//         .community {
-//           width: fit-content;
-//         }
-
-//         a {
-//           text-decoration: none;
-//         }
-//         p {
-//           margin-left: 0.5rem;
-//         }
-
-//         h4 {
-//           margin-top: 0.3rem;
-//           margin-bottom: 0;
-//         }
-
-//         .visitors {
-//           color: #4e4e4e;
-//         }
-
-//       }
-
-//       .track-slot-details {
-//         margin-left: 0.3rem;
-//       }
-
-//       .speaker-details {
-
-//         nb-card-body {
-//           display: flex;
-//           align-items: center;
-//           text-align: center;
-//           width: 100%;
-
-//           h5, p {
-//             margin-bottom: 0.5rem;
-//           }
-//           .avatar {
-//             width: 75px;
-//             img {
-//               width: 100%;
-//             }
-//           }
-
-//           .social-links {
-//             display: flex;
-//             justify-content: space-around;
-//             nb-icon {
-//               color: #477dff;
-//             }
-//           }
-
-//           .about-me {
-//             word-break: break-word;
-//             width: 60%;
-//             margin-left: 1rem;
-//             text-align: left;
-//           }
-//         }
-//       }
-//     }
-
-//     .video-stream {
-//       height: 300px;
-
-//       @media screen and (min-width: 1000px) {
-//         height: 460px;
-//       }
-
-//       nb-card {
-//         height: 100%;
-//       }
-
-
-//       &.external_link {
-//         height: 11rem !important;
-//       }
-
-//     }
-
-//     .card-live-discussion {
-//       width: 100%;
-
-//       nb-tabset {
-//         height: 95%;
-//         // min-height: 300px;
-//         nb-tab {
-//           height: 100%;
-//           max-height: 75vh;
-//           overflow: auto;
-//         }
-//       }
-
-//       @media screen and (min-width: 1000px) {
-//         width: 40%;
-
-//         nb-card {
-//           height: 100%;
-//         }
-
-//         nb-tabset {
-
-//           nb-tab {
-//             max-height: 100vh;
-//           }
-//         }
-//       }
-//     }
-
-//   }
-
-
-//   .visit-users {
-//     width: 100%;
-
-//     nb-card-body {
-//       display: flex;
-//       flex-wrap: wrap;
-//     }
-
-//     .visit-user {
-//       width: 200px;
-//       margin: 0.5rem;
-//       border: 1px solid lightgrey;
-//       border-radius: 5px;
-//     }
-//   }
-// }
-
-
-
-
-// .card-col {
-//   flex: 1 0 100%;
-//   flex-direction: column;
-//   margin: 0 0.5rem;
-//   @media screen and (min-width: 1000px) {
-//     flex: 1 0 calc(50% - 1rem);
-//     flex-direction: row;
-//   }
-// }
-
-
 .speaker-session-details {
   display: flex;
   flex-direction: column;
@@ -240,9 +73,9 @@
             nb-card-body {
               width: 100%;
               padding: 0.5rem 0.5rem;
+
               nb-tabset {
                 height: 100%;
-
                 nb-tab {
                   padding: 0;
                   height: 90%;
@@ -300,6 +133,13 @@
 
               nb-tabset {
                 height: 100%;
+                ::ng-deep {
+                  ul.tabset {
+                    overflow-x: auto;
+                    padding: 5px;
+                  }
+                }
+
 
                 nb-tab {
                   padding: 0;
@@ -326,7 +166,7 @@
             border-radius: 5px;
           }
         }
-      
+
 
         .video-stream {
           width: 100%;
